# rag_memory

./: .gitignore  README.md  env.example  main.py  process_failed_conversations.py  pyproject.toml  start_server.py
src/ai_memory/: __init__.py  cli.py  main.py
src/ai_memory/api/: __init__.py  models.py  routes.py
src/ai_memory/core/: __init__.py  conversation_processor.py  data_loader.py  memory_store.py
src/ai_memory/models/: __init__.py  clustering.py  conversation.py  memory.py
src/ai_memory/rag/: __init__.py  clustering_manager.py  embedding_manager.py  query_engine.py  query_parser.py  retriever.py
src/ai_memory/utils/: __init__.py  date_utils.py  file_utils.py  language_detection.py
tests/: __init__.py  test_basic.py
tests/debug/: __init__.py  debug_language_detection.py  debug_text_processing.py  interactive_test.py  test_single_processing.py
tests/integration/: __init__.py  test_clustering.py  test_clustering_queries.py  test_context_search.py  test_llm_query.py  test_single_indexing.py
tests/unit/: __init__.py  test_data_loading.py  test_language_detection.py  test_memory_store.py  test_openai_embeddings.py  test_retrieval.py
